# demo_cmake_call_dylib

./: CMakeLists.txt  readme.md
ext/lib_hello/: CMakeLists.txt
src/: main.cxx
