CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

# 1??????
project(demo_dylib)

# 2??????????? ${CMAKE_CURRENT_SOURCE_DIR}???CMakeLists.txt?????
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/ext/lib_hello/include)

# 3???????????
link_directories(${CMAKE_CURRENT_SOURCE_DIR}/ext/lib_hello/build/lib) 

# 4????????,
add_executable(main src/main.cxx)

# 5????????????
target_link_libraries(main hello_shared ) 


